# plex-client

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  player.rs  plex.rs  plex_auth.rs  ui.rs
src/ui/: detail.rs  episodes.rs  grid.rs  login.rs  mod.rs  playback.rs  player_widget.rs  seasons.rs  settings.rs  sidebar.rs  state.rs  style.rs  util.rs
