[package]
name = "plex-client"
version = "0.1.0"
edition = "2021"
description = "A native Plex media client for Linux"

[dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
gdk-pixbuf = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
